manifests/deployment-uat.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tkmmsconsentmanageruat
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tkmmsconsentmanageruat
  template:
    metadata:
      labels:
        app: tkmmsconsentmanageruat
      annotations:
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: '8080'
        prometheus.io/scrape: 'true'
    spec:
      nodeSelector:
        tkm-uat: 'true'
      hostAliases:
        - ip: "10.70.73.228"
          hostnames:
            - "tkm-pgsql-pci-uat.postgres.database.azure.com"
        - ip: "10.70.73.38"
          hostnames:
            - "tkmstorageblobuatpci.blob.core.windows.net"
        - ip: "10.230.9.5"
          hostnames:
            - "api.uat.platform.pagopa.it"
        - ip: "10.70.73.39"
          hostnames:
            - "u87-evhn-pci-uat.servicebus.windows.net"
        - ip: "10.230.7.68"
          hostnames:
            - "cstar-u-evh-ns.servicebus.windows.net"
      volumes:
        - name: secrets-store-inline-consent-manager
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: tkm-consent-manager-spc-uat
            nodePublishSecretRef:
              name: tkm-consent-manager-kv-store-creds-uat
      containers:
        - name: tkmmsconsentmanageruat
          image: cstaruatregistry.azurecr.io/tkmmsconsentmanager
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 4Gi
              cpu: 500m
            limits:
              memory: 4Gi
              cpu: 1000m
          volumeMounts:
            - name: secrets-store-inline-consent-manager
              mountPath: /mnt/secrets-store
              readOnly: true
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 20
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 30
          imagePullPolicy: Always
