manifests/service-sit.yml
apiVersion: v1
kind: Service
metadata:
  name: tkmmsconsentmanagersit
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: tkmmsconsentmanagersit
