manifests/ingress-uat.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "130"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: tkmmsconsentmanageringress
  namespace: tkm-uat
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: tkmmsconsentmanageruat
                port:
                  number: 8080
            path: /tkmconsentmanager(/|$)(.*)
            pathType: Prefix
